# ca_events_svc

./: .env  README.md  alembic.ini  pyproject.toml
alembic/: __init__.py  context.py  env.py
alembic/versions/: 0001_baseline.py  0002_create_events_table.py
app/: __init__.py  config.py  error_handlers.py  exceptions.py  main.py
app/db/: base.py  session.py
app/models/: __init__.py  event.py
app/routers/: __init__.py  events.py
app/schemas/: __init__.py  error.py  event.py
app/services/: event_service.py
app/utils/: datetime.py
tests/: conftest.py  test_alembic_env.py  test_app_factory.py  test_config.py  test_db_session.py  test_error_handlers.py  test_event_model.py  test_exception_handler_integration.py  test_migration_events.py  test_openapi.py
tests/test_schemas/: test_error_schemas.py  test_event_schemas.py
tests/test_services/: test_event_service_create.py  test_event_service_delete.py  test_event_service_error_handling.py  test_event_service_retrieve.py  test_event_service_update.py
tests/test_utils/: test_datetime_utils.py
